--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,9 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_currencies_tracker: ^0.0.4
+  toast: ^0.1.5
+  fl_chart: ^0.12.0
+  convex_bottom_bar: ^ 2.5.1
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -46,9 +49,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+     - assets/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
